<resources>
    <string name="app_name">Daimler</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="button_create_account">Create Account</string>
    <string name="error_field_required">This field is required!</string>
    <string name="error_password_mismatch">Password don\'t match!</string>
    <string name="title_register">REGISTER</string>
    <string name="button_edit">Edit</string>
    <string name="button_daily">Daily</string>
    <string name="button_weekly">Weekly</string>
    <string name="button_monthly">Monthly</string>
    <string name="label_rides_accepted">RIDES\nACCEPTED</string>
    <string name="label_rides_declined">RIDES\nDECLINED</string>
    <string name="label_work_hours">WORK\nHOURS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_select_date_range">Select date range</string>
    <string name="label_total_rides_taken">TOTAL\nRIDES TAKEN</string>
    <string name="label_total_distance_driven">TOTAL\nDISTANCE DRIVEN</string>
    <string name="total_average_rides_taken">AVERAGE\nRIDES TAKEN</string>
    <string name="label_average_distance_driven">AVERAGE\nDISTANCE DRIVEN</string>
    <string name="title_inbox">INBOX</string>
    <string name="title_account_info">ACCOUNT INFO</string>
    <string name="description_start_ride">Start Ride</string>
    <string name="menu_account_info">Account Info</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_settings">Settings</string>
    <string name="title_favourite_routes">FAVOURITE ROUTES</string>
    <string name="favourite_route_from">From:</string>
    <string name="favourite_route_to">To:</string>
    <string name="title_ride_history">RIDE HISTORY</string>
    <string name="title_ride">RIDE</string>
    <string name="ride_from">From:</string>
    <string name="ride_to">To:</string>
    <string name="ride_date">Date:</string>
    <string name="ride_start_time">Begin:</string>
    <string name="ride_finish_time">End:</string>
    <string name="ride_price">Price:</string>
    <string name="ride_length">Length:</string>
    <string name="ride_estimated_time">Time:</string>
    <string name="ride_status">Status:</string>
    <string name="ride_panic">Panic:</string>
    <string name="ride_babies">Babies:</string>
    <string name="ride_pets">Pets:</string>
    <string name="ride_split_fare">Split fare:</string>
    <string name="ride_rate">Rate:</string>
    <string name="rate_ride">Rate ride</string>
    <string name="add_to_favourites">ADD TO FAVOURITES</string>
    <string name="subtitle_road">ROAD</string>
    <string name="subtitle_route">ROUTE</string>
    <string name="subtitle_info">INFO</string>
    <string name="subtitle_driver">DRIVER</string>
    <string name="ride_driver_name">Name:</string>
    <string name="ride_driver_email">Email:</string>
    <string name="ride_driver_number">Number:</string>
    <string name="ride_driver_address">Address:</string>
    <string name="ride_comment">Comment</string>
    <string name="schedule_a_ride">SCHEDULE A RIDE</string>
    <string name="show_messages">SHOW MESSAGES</string>
    <string name="title_login">LOGIN</string>
    <string name="hint_username">Username</string>
    <string name="button_login">Login</string>
    <string name="text_button_create_account">Register</string>
    <string name="text_button_forgot_password">Forgot password?</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_history">History</string>
    <string name="passenger_name">Name:</string>
    <string name="passenger_surname">Surname:</string>
    <string name="title_details">DETAILS</string>
    <string name="title_passenger_list">PASSENGERS</string>
    <string name="ride_passengers">Passengers:</string>
    <string name="button_active">Active</string>
    <string name="button_inactive">Inactive</string>
    <string name="label_no_account">Don\'t have an account?</string>
    <string name="button_now">Now</string>
    <string name="button_schedule">Schedule</string>
    <string name="label_name">Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_number">Number:</string>
    <string name="label_address">Address:</string>
    <string name="button_send_request">Send Request</string>
    <string name="button_pick_an_image">Pick An Image</string>
    <string name="label_change_password">Change Password</string>
    <string name="search">Search</string>
    <string name="inbox_panic">Panic</string>
    <string name="inbox_support">Support</string>
    <string name="inbox_ordinary">Ordinary</string>
    <string name="inbox_ride">Ride</string>
    <string name="label_total_ride_cost">TOTAL RIDE COST</string>
    <string name="label_average_ride_cost">AVERAGE RIDE COST</string>
    <string name="rate_driver">RATE DRIVER</string>
    <string name="rate_vehicle">RATE VEHICLE</string>
    <string name="driver_rate">Driver</string>
    <string name="vehicle_rate">Vehicle</string>
    <string name="comment">Comment</string>
    <string name="rate">Rate</string>
</resources>