<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.common.activity.LoginActivity"
    android:id="@+id/loginRoot">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/loginForm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:fontFamily="@font/anton_regular"
            android:textSize="40sp"
            android:textColor="@color/primary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:layout_marginVertical="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginVertical="5dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp"
            android:text="@string/button_login"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:onClick="parseLoginData"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginTop="-4dp"
            android:layout_gravity="end"
            android:onClick="forgotPassword"
            android:textSize="11sp"
            android:text="@string/text_button_forgot_password" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/buttonGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_no_account"
                android:fontFamily="@font/tw_light"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="2dp"
                android:alpha="0.35"
                android:textSize="14sp"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="74dp"
                android:layout_height="34dp"
                android:onClick="createAccount"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"
                android:textColor="?colorPrimaryVariant"
                android:text="@string/text_button_create_account" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>