<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.common.activity.EditUserBasicInfo">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="45dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:gravity="center"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/updateBasicInfoForm">

            <!-- Profile Picture -->
            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/basicInfoProfilePicture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/my_profile_pic"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/basicInfoPickImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_pick_an_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basicInfoNameLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:layout_marginVertical="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basicInfoSurnameLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_surname"
                android:layout_marginVertical="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basicInfoEmailLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_marginVertical="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basicInfoPhoneNumberLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:layout_marginVertical="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basicInfoAddressLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address"
                android:layout_marginVertical="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/basicInfoPasswordCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_change_password"
                android:textSize="16sp"
                android:fontFamily="@font/tw_extra_light"
                style="@style/Widget.App.CheckBox"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basicInfoPasswordLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:layout_marginVertical="5dp"
                app:endIconMode="password_toggle"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/basicInfoRepeatPasswordLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_repeat_password"
                android:layout_marginVertical="5dp"
                app:endIconMode="password_toggle"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateBasicInfoButton"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:text="@string/button_create_account"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>