<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.driver.fragment.DriverRidesStatsFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/statsPeriodSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:singleSelection="true"
        app:selectionRequired="true">
        <Button
            android:id="@+id/statsPeriodSelector_daily"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/button_daily"
            android:backgroundTint="@color/transparent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/button_weekly"
            android:backgroundTint="@color/transparent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/button_monthly"
            android:backgroundTint="@color/transparent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"/>

    <TextView
        android:id="@+id/earnings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="8560 RSD"
        android:textAlignment="center"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/economica"
        android:textColor="@color/primary"
        android:textSize="48sp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal">
        <!-- Rides accepted -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_rides_accepted"
                android:textAlignment="center"
                android:fontFamily="@font/tw_light"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/acceptedRides"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="13"
                android:textAlignment="center"
                android:fontFamily="@font/anton_regular"
                android:textColor="@color/primary_light"
                android:textSize="48sp"/>
        </LinearLayout>
        <!-- Rides declined -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_rides_declined"
                android:textAlignment="center"
                android:fontFamily="@font/tw_light"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/declinedRides"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:textAlignment="center"
                android:fontFamily="@font/anton_regular"
                android:textColor="@color/primary_light"
                android:textSize="48sp"/>
        </LinearLayout>
        <!-- Work hours -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_work_hours"
                android:textAlignment="center"
                android:fontFamily="@font/tw_light"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/workHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="7"
                android:textAlignment="center"
                android:fontFamily="@font/anton_regular"
                android:textColor="@color/primary_light"
                android:textSize="48sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>